# pubky-messenger-ts

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-pages.yml
examples/: chat.ts  discover.ts
examples/web/: index.html  main.ts  style.css
iroh-discovery/: Cargo.toml  README.md  build.sh
iroh-discovery/src/: node.rs  wasm.rs
src/: client.ts  crypto.ts  index.ts  message.ts  secretbox.ts
src/discovery/: hyperdht.d.ts  hyperswarm.ts  index.ts  iroh.ts  service.ts  types.ts  zbase32.ts
src/discovery/iroh-wasm/: iroh_discovery.d.ts  iroh_discovery.js  iroh_discovery_bg.wasm  iroh_discovery_bg.wasm.d.ts
test/fixtures/: p1.pkarr  p2.pkarr
test/integration/: discovery.test.ts  messaging.test.ts
test/unit/: crypto.test.ts  message.test.ts  recovery.test.ts  secretbox.test.ts
